# RMCreator-App

./: .gitmodules  package.json
.github/workflows/: build.yml  publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
